# cell0-os

./: .dockerignore  .gitignore  .lycheeignore  .npmignore  AGENTS.md  BOOTSTRAP_COMPLETE.md  CELL0_CONFIG_UNIFICATION_REPORT.md  CELL0_OPENCLAW_AUDIT_REPORT.md  CELL0_SCALABILITY_REPORT_2026-02-18.md  CELL0_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_AUDIT_REPORT.md  Dockerfile  EDGE_CASE_TEST_REPORT.md  GITHUB_ACTIONS_FIX_SUMMARY.md  IDENTITY.md  INSTALLATION_IMPROVEMENTS_REPORT.md  JEPA_IMPLEMENTATION_REPORT.md  KULLU_CO_ARCHITECT_PROPOSAL.md  KULLU_PROJECT_NOTEBOOK.md  KULLU_TOTAL_POSSESSION_ARCHIVE.md  KULLU_VOICE_AGENT_PROGRESS.md  LICENSE  OFFLINE_TEST_FIXES_SUMMARY.md  OFFLINE_TEST_GUIDE.md  PRODUCTION_READINESS_GAP_ANALYSIS.md  PROGRESS.md  README.md  SECURITY.md  SECURITY_HARDENING_REPORT.md  SOUL.md  SOVEREIGN_SECURITY_MASTER.md  TEST_FIXES.md  TEST_REPORT_whatsapp_web.md  USER.md  VISION.md  docker-compose.yml  export_notes.py  full_log.txt  (+17 more)
cell0/: .env.signal.example  CANVAS_README.md  DEVOPS_IMPLEMENTATION_SUMMARY.md  Dockerfile  FULL_SPECTRUM.md  INFRASTRUCTURE.md  INSTALLATION_IMPROVEMENTS.md  PRODUCTION_READINESS_GAP_ANALYSIS.md  SCALABILITY_IMPLEMENTATION_SUMMARY.md  SECURITY_AUDIT_REPORT_2026-02-18.md  SECURITY_HARDENING_CHECKLIST.md  SECURITY_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_REPORT.md  __init__.py  canvas_demo.py  cell0ctl.py  cell0d.py  cell0d.service  daemon-status.json  docker-compose.full.yml  docker-compose.signal.yml  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_pytest.py  setup.cfg  setup.sh  setup_voice.sh  start.sh  stop.sh  test_daemon.py
cell0/.agent-messages/: progress-update-3.md
cell0/.github/workflows/: cell0-full-spectrum.yml  ci.yml  deploy-k8s.yml  deploy-kubernetes.yml  docker-build-push.yml  e2e.yml  tests.yml
cell0/benchmarks/: cell0_scalability_engine.py
cell0/cell0/: __init__.py  service  swarm
cell0/cell0/engine/: __init__.py  ai_engine.py  mlx_bridge.py
cell0/cell0/security/: jwt_handler.py
cell0/config/: tool_profiles.yaml
cell0/config/development/: app_config.yaml
cell0/config/production/: app_config.yaml
cell0/config/staging/: app_config.yaml
cell0/continuous_improvement/: README.md
cell0/docker/: Dockerfile  docker-compose.yml  healthcheck.sh  prometheus.yml  promtail-config.yml  redis.conf
cell0/docker/signal-cli/: Dockerfile  docker-entrypoint.sh  healthcheck.sh
cell0/docs/: API_REFERENCE.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_GUIDE.md  ARCHITECTURE_ROADMAP.md  CHANGELOG.md  CIVILIZATION_GRADE_ARCHITECTURE.md  CO_ARCHITECTURE.md  CRYPTO_SYSTEMS.md  DAY1_2_SUMMARY.md  DAY1_COMPLETE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEVELOPER_TUTORIAL.md  EVOLUTION_LOG.md  FAQ.md  FEDERATION_DESIGN.md  HGW_ARCHITECTURE.md  HGW_SUMMARY.md  INSTALLATION.md  INTEGRATION_BRIDGE.md  INTERVIEW_COMPLETE.md  IPC_PROTOCOL_SPEC.md  ISSUE_RESOLUTION.md  MCIC_ARCHITECTURE.md  MCIC_BRIDGE_REPORT.md  MULTI_PHASE_DEPLOYMENT.md  PHASE_UI_0_PLAN.md  QUANTUM_SECURITY.md  RAFT_CONSENSUS.md  SCALABILITY_PERFORMANCE.md  SWARM_REPORT.md  SYFPASS_PROTOCOL.md  SYPAS_PROTOCOL.md  SYPAS_PROTOCOL_SPEC.md  THE_FULL_DISCLOSURE.md  TROUBLESHOOTING.md  UI_ALTERNATIVES.md
cell0/docs/RUNBOOKS/: DEPLOYMENT.md  INCIDENT_RESPONSE.md  MAINTENANCE.md
cell0/engine/: __init__.py  error_handling.py  performance.py  resource_limits.py
cell0/engine/agents/: __init__.py
cell0/engine/cache/: __init__.py  model_output_cache.py  redis_client.py  response_cache.py  search_cache.py
cell0/engine/config/: README.md  __init__.py  validation.py
cell0/engine/monitoring/: __init__.py  health_checks.py  logging_config.py  metrics.py
cell0/engine/search/: README.md  __init__.py  cache.py  providers.py  ranker.py
cell0/engine/security/: __init__.py  auth.py  jwt_handler.py  rate_limiter.py  rbac.py  sandbox.py  secrets.py  tool_policy.py  tool_profiles.py
cell0/engine/skills/: README.md  __init__.py  skill_loader.py  skill_manager.py  skill_manifest.py  skill_registry.py
cell0/engine/tools/: __init__.py  canvas.py  google_chat.py  signal.py  web_search_enhanced.py
cell0/engine/voice/: README.md  __init__.py  audio_player.py  requirements.txt  stt.py  tts.py  voice_session.py  wake_word.py
cell0/examples/: agent_canvas_example.py  gateway_client.py  gateway_client_example.py  voice_demo.py
cell0/gui/: __init__.py  canvas_components.py  canvas_server.py  requirements.txt
cell0/gui/canvas_templates/: canvas.html
cell0/integrations/: README_GOOGLE_CHAT.md  SIGNAL_INTEGRATION_SUMMARY.md  SIGNAL_QUICKREF.md  SIGNAL_README.md  __init__.py  google_chat_bot.py  google_chat_config.yaml  requirements-signal.txt  signal_bot.py  signal_config.yaml  signal_setup.sh
cell0/interface/cli/: skill_commands.py
cell0/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  jobs.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  pvc.yaml  rbac.yaml  secrets.yaml  service.yaml  servicemonitor.yaml
cell0/kernel/: Cargo.toml  build.sh
cell0/kernel/src/: boot.rs  lib.rs  main.rs  raft.rs  raft_transport.rs  serial.rs  (+1 more)
cell0/monitoring/: IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.monitoring.yml  loki-config.yaml  prometheus.yml  promtail-config.yml
cell0/packaging/: README.md
cell0/scripts/: README.md  backup.py  cell0-doctor.py  remediate_critical_security.sh  restore.py  verify_installation.py
cell0/service/: README.md  gateway_protocol.py  gateway_ws.py  monitoring_service.py  presence.py  raft_consensus.py  voice_gateway.py
cell0/swarm/: consensus.py  discovery.py  failure_detector.py
cell0/system/: COORDINATION.md  SWARM_STATUS.md  kullu-coordinator.py  swarm-manifest.json
cell0/tests/: README.md  __init__.py  conftest.py  run_tests.py  test_agent_routing.py  test_ai_engine.py  test_canvas.py  test_enhanced_search.py  test_gateway_ws.py  test_google_chat.py  test_monitoring.py  test_raft_consensus.py  test_signal.py  test_skill_apple_reminders.py  test_skill_weather.py  test_skills.py  test_tool_security.py  test_voice.py
(+761 files in other folders)
