[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cell0-os"
version = "1.2.0"
description = "Cell 0 OS - Sovereign Edge Model Operating System"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core async/web
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-socketio>=5.10.0",
    
    # Data/Config
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    
    # HTTP clients
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "aiofiles>=23.2.0",
    
    # CLI/UI
    "rich>=13.7.0",
    "typer>=0.9.0",
    "click>=8.1.0",
    "prompt-toolkit>=3.0.0",
    
    # Observability (Production)
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.7",
    "structlog>=23.2.0",
    "psutil>=5.9.0",
    
    # Security (Production)
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Caching (Production)
    "redis>=5.0.0",
    "diskcache>=5.6.0",
    
    # Utilities
    "typing-extensions>=4.8.0",
    "tenacity>=8.2.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
    "coverage>=7.3.0",
    "coverage-badge>=1.1.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "responses>=0.24.0",
    "aioresponses>=0.7.6",
    "locust>=2.19.0",
    "httpx>=0.25.0",
]
dev = [
    "cell0-os[test]",
    "pre-commit>=3.5.0",
    "jupyter>=1.0.0",
    "ipython>=8.18.0",
]

[project.scripts]
cell0ctl = "cell0.cell0ctl:main"
cell0d = "cell0.cell0d:main"

[project.urls]
Homepage = "https://github.com/cell0-os/cell0"
Documentation = "https://docs.cell0.io"
Repository = "https://github.com/cell0-os/cell0"

[tool.setuptools]
packages = ["cell0", "cell0.engine", "cell0.service", "cell0.engine.monitoring", "cell0.engine.security"]

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests", "cell0/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security-related",
    "requires_env(name): marks tests requiring specific env vars",
    "load: marks load/performance tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:datetime",
    "ignore::UserWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["cell0", "col", "engine", "service"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/venv/*",
    "*/.venv/*",
    "*/node_modules/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "test-results/htmlcov"

[tool.coverage.xml]
output = "test-results/coverage.xml"

# ============================================================================
# Black Configuration
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = "\\.pyi?$"
extend-exclude = """
/(
    \\.git
  | \\.venv
  | venv
  | build
  | dist
)/
"""

# ============================================================================
# isort Configuration
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["cell0", "col", "engine", "service"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# ============================================================================
# mypy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
